# MatePro

./: .gitignore  AGENT_FEATURES.md  AGENT_TEST_PROMPTS.md  AGENT_WEB_TEST_PROMPTS.md  AGENT_WEB_TOOLS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DOCS_INDEX.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_SQL_GUIDE.md  MCP_SQL_TEST_PROMPTS.md  QUICKSTART.md  README.md  TOOL_REFERENCE.md  WEB_ENHANCEMENT_SUMMARY.md
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_GUIDE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/images/: .gitkeep  README.md
.github/workflows/: release.yml
legacy-egui/: agent.rs  lib.rs  mcp_sql.rs
legacy-ui/: app.js  index.html  styles.css
packaging/: matepro.spec.in
src/: agent.rs  main.rs  mcp_sql.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  aiconnect.rs  calendar_integration.rs  lib.rs  local_storage.rs  main.rs  mcp_sql.rs
ui/: app.js  index.html  styles.css
