
# MatePro - Workspace configuration
# Main application is the Tauri GUI in `src-tauri`

[workspace]
members = ["src-tauri"]
resolver = "2"

# Note: legacy code lives in `src/` (egui) and `ui/` (web assets).
# If you want to include the legacy crate in the workspace, add it to
# `members` or move it to a separate repository. Keeping the workspace
# minimal avoids accidental builds of desktop-only crates during CI.
# MCP SQL Server support
